cleanup and re-enable a test